--- a/app/views/network_memberships/edit.html.erb
+++ b/app/views/network_memberships/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing network_membership</h1>
+<h1> network_membership</h1>
 
 <% form_for(@network_membership) do |f| %>
   <%= f.error_messages %>
