--- a/app/views/address_uses/edit.html.erb
+++ b/app/views/address_uses/edit.html.erb
@@ -1,22 +1,22 @@
-<h1>Editing address_use</h1>
+<h1> address_use</h1>
 
 <% form_for(@address_use) do |f| %>
   <%= f.error_messages %>
 
   <p>
     <%= f.label :target_type %><br />
-    <%= f.text_field :target_type %>
+    <%= f.select :target_type, AddressUse.targets %>
   </p>
   <p>
     <%= f.label :target_id %><br />
-    <%= f.text_field :target_id %>
+    <%= f.select :target_id, @address_use.target_type.constantize.send('map_name_and_id'), :id => 'target_select' %>
   </p>
   <p>
     <%= f.label :address_id %><br />
-    <%= f.text_field :address_id %>
+    <%= f.select :address_id, Address.map_name_and_id %>
   </p>
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit :relocate %>
   </p>
 <% end %>
 
