--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,10 @@
   </head>
   <body>
     <%= profile_link if logged_in? %><br>
-    <% %w[address_uses addresses brands cities comments credit_cards followings groups image_uses images listings locations memberships messages network_memberships networks offerings prices products purchases schedules states stores taggings tags users website_uses website].each do |resource| %>
-      [<%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %>]
+    <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites]].each do |set| %>
+      <% set.each do |resource| %>
+        [<%= link_to resource, "/#{resource}" %> <%= link_to '(cr8)', "/#{resource}/new" %>]
+      <% end %><br>
     <% end %>
     <%= yield %>
   </body>
