--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,19 +1,16 @@
-<h1>New message</h1>
+<h1> message</h1>
 
 <% form_for(@message) do |f| %>
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body %>what it is:
   </p>
   <p>
-    <%= f.label :recipient_id %><br>
-    <%= f.select :recipient_id, User.map_name_and_id %>
+    <%= f.select :recipient_id, User.map_name_and_id %>to:
   </p>
   <p>
-    <%= f.label :reply_id %><br />
-    <%= f.select :reply_id, User.incoming_messages.map_name_and_id %>
+    <%= f.select :reply_id, current_user.incoming_messages.map_name_and_id, :include_blank => true %>replying to?
   </p>
   <p>
     <%= f.submit :bestow %>
