--- a/app/views/states/new.html.erb
+++ b/app/views/states/new.html.erb
@@ -1,10 +1,9 @@
-<h1>New state</h1>
+<h1> state</h1>
 
 <% form_for(@state) do |f| %>
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
     <%= f.text_field :name %>
   </p>
   <p>
@@ -14,3 +13,5 @@
 
 <%= link_to 'states', states_path %>
 <%= link_to_backup %>
+states we already know about:<br>
+<%= State.all.map { |s| s.name + '.../////////////\\\\\\\\....' }.join %>
