--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,7 +1,7 @@
 
   <%=h @brand.name %>
   <%=h @brand.phone %><br>
-
+  <%= attach_image_link @brand %>
   <%= @brand.products.count %> products
 
 
