--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag :defaults %>
   </head>
   <body>
     <%= profile_link if logged_in? %><br>
