--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -3,7 +3,7 @@
 about  <%=h @comment.target_type.downcase %>  <%= link_to_name @comment.target %><br>
 <%= 'it was a reply to' + link_to_name @comment.reply if comment.reply %>
   
-
+<%= attach_image_link @comment %>
 <%= link_to 'edit', edit_comment_path(@comment) %> |
 <%= link_to 'comments', comments_path %>
 <%= link_to_backup %>
