--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,7 @@
   <blockquote><%=h @message.body %></blockquote><br>
   from <%= link_to_name @message.user %> to <% link_to_name @message.recipient %><br>
-  <%= 'this is a reply to ' + link_to_name(@message.reply, 'first_sentence') + '<br>' if @message.reply_id %>
+  <%= 'this is a reply to ' + link_to_name(@message.reply, 'first_sentence') + '<br>' if @message.reply_id %><br>
+  <%= attach_image_link @message %>
 
 <% if @message.read_on.blank? %>
   unread by recipient as of yet.
