--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <% @users.each do |u| %>
   <%= link_to_name u %>
   <%= link_to 'edit', edit_user_path(u) %><br>
+  <%= attach_image_link u %>
 <% end %>
