--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,5 +1,6 @@
 <%= link_to_name @location.store %><br>
 <%= @location.schedule.display if @location.schedule %><br>
+<%= attach_image_link @location %>
 
 <%=h @location.address.display %><br>
 <%=h @location.phone %><br>
