--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,12 +11,12 @@
 <% for message in @messages %>
   <tr>
     <td><%=h message.body %></td>
-    <td><%= link_to message.user.name, message.user %> to <%= link_to message.recipient.name, message.recipient %></td>
-    <td><%= link_to message.reply.subject, message.reply if message.reply %></td>
+    <td><%= link_to_name message.user %> to <%= link_to_name message.recipient %></td>
+    <td><%= link_to_name('subject') message.reply %></td>
     <td><%=h message.read_on %></td>
     <td><%= link_to 'show', message %></td>
     <td><%= link_to 'edit', edit_message_path(message) %></td>
-    <td><%= link_to 'Destroy', message, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= attach_image_link message %></td>
   </tr>
 <% end %>
 </table>
