--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -3,7 +3,8 @@
 <table>
 <% for state in @states %>
   <tr>
-    <td><%= link_to_name, state %></td>
+    <td><%= link_to_name state %></td>
+    <%= attach_image_link state %>
   </tr>
 <% end %>
 </table>
