missing sources added to tagging

--- a/app/views/image_uses/new.html.erb
+++ b/app/views/image_uses/new.html.erb
@@ -22,7 +22,7 @@
   <% else %>
     <p>
       <%= f.label :target_type %><br />
-      <%= f.text_field :target_type %>
+      <%= f.select :target_type, ImageUse.targets %>
     </p>
     <p>
       <%= f.label :target_id %><br />
