--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,7 @@
   <%=h @product.name %><br>
   <%= link_to_name @product.brand %><br>
-  <%= attach_image_link product %>
+  <%= attach_image_link @product %><br>
+  <%= render :partial => 'tags/tag_form', :locals => {:obj => @product} %>
 <%= link_to 'edit', edit_product_path(@product) %> |
 <%= link_to 'products', products_path %>
 <%= link_to_backup %>
