--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,6 +1,7 @@
 <%=h @store.name %>  administered by <%= link_to_name, @store.administrator %><br>
 <%= image_tag @store.primary_image.public_filename  if @store.primary_image %><br>
-<%= attach_image_link @store %>
+<%= attach_image_link @store %><br>
+<%= lists @stores %>
 
 <% @store.locations.each do |l| %>
   <%= link_to l.street + ' ' + l.city, l %><br>
