--- a/app/views/image_uses/new.html.erb
+++ b/app/views/image_uses/new.html.erb
@@ -7,8 +7,8 @@
     <%= f.hidden_field :image_id %>
   <% else %>
     <p>
-      <%= f.label :image_id %><br />
       <%= f.select :image_id, Image.map_name_and_id('filename') %>
+      <%= link_to 'upload an image', new_image_path %>
     </p>
   <% end %>
   
