--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <%= @user.login %><br><br>
 <%= @user.listings.count %> items on lists<br>
 <%= attach_image_link @user %>
-<%= list_links @user %>
+<%= list_links @user %><br>
+<%= tags_on @user %>
+<%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
