--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,5 @@
 <%= list_links @user %><br>
 <%= tags_on @user %>
 <%= render :partial => 'tags/tag_form', :locals => {:obj => @user} %>
+<%= comments_on @user %>
+<%= render :partial => 'comments/comment_form', :locals => {:obj => @user} %>
