--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,7 +1,7 @@
   <%=h @group.name %>!<br>
 administered by  <%= link_to_name @group.administrator %><br><br>
-
-  <%= @group.members.count %> members!<br>
+  <%= primary_image @group %>
+  <%= @group.users.count %> members!<br>
   <%= attach_image_link @group %>
 <%= link_to 'edit', edit_group_path(@group) %> |
 <%= link_to 'groups', groups_path %>
