--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,16 +1,12 @@
 <h1>tags</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-  </tr>
-
 <% for tag in @tags %>
   <tr>
     <td><%=h tag.name %></td>
     <td><%= link_to 'show', tag %></td>
     <td><%= link_to 'edit', edit_tag_path(tag) %></td>
-    <td><%= link_to 'Destroy', tag, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'uses', tag_taggings_path(tag) %></td>
   </tr>
 <% end %>
 </table>
