--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,6 +3,11 @@ administered by  <%= link_to_name @group.administrator %><br><br>
   <%= primary_image @group %>
   <%= @group.users.count %> members!<br>
   <%= attach_image_link @group %>
+  
+  <%= render :partial => 'tags/tag_form', :locals => {:obj => @group} %>
+  <%= render :partial => 'comments/comment_form', :locals => {:obj => @group} %>
+  
+  <%= link_to 'join group', memberships_path(:membership => {:group_id => @group}), :method => :post %>
 <%= link_to 'edit', edit_group_path(@group) %> |
 <%= link_to 'groups', groups_path %>
 <%= link_to_backup %>
